more fix on mobile slider menu

--- a/public/stylesheets/engage/style.css
+++ b/public/stylesheets/engage/style.css
@@ -248,44 +248,50 @@ div#header{
 	box-shadow :0px 1px 5px #9e9e9e;
 	display: none;
 	text-align: center;
+
 	
 }
 .slider_box ul{
 	display: inline-block;
 	margin-bottom: 0;
-	padding: 10px 40px;
+	width: 85%;
+	padding: 0 20px;
 	}
+	
 .slider_box li{
 	list-style: none;
+	
+	padding: 5px 0;
 }	
 
 .slider_box li a{
 	color: #888;
 	}
 
-.slider_box ul{
-	text-align: left;
-	padding: 5px 25px;
-}
 
-.slider_box ul li{
-	padding: 5px 0;
+
+.slider_box#menu_box ul li{
+
+	width:50%;
+	float: left;
+	text-align: left;
+display: inline-block;
 }
 
 .slider_box#courses_box ul{
-	width: 360px;
-	text-align: center;
-	padding: 10px 0;
+
 }
 .slider_box#courses_box li{
 	display: inline-block;
-	padding: 5px 10px;
-	width: 104px;
+	width: 33%;
+	float: left;
+	
+	text-align: left;
+
 }
 .slider_box#courses_box li a{
 	border-left: 4px solid #F14241;
-	padding-left: 5px
-}
+	padding-left: 5px;}
 
 .slider_box#mobile_share_box form{
 	margin: 20px;
@@ -667,6 +673,29 @@ span.coursename a.color-6{
 
 }
 
+div.dropdown_list li.courses a.color-1{
+	border-left: 4px solid #FF6A68;
+}
+
+div.dropdown_list li.courses a.color-2{
+	border-left: 4px solid #FFCE7A;
+}
+
+div.dropdown_list li.courses a.color-3{
+	border-left: 4px solid #4FA2F7;
+}
+
+div.dropdown_list li.courses a.color-4{
+	border-left: 4px solid #8FD960;
+}
+
+div.dropdown_list li.courses a.color-5{
+	border-left: 4px solid #D3B2ED;
+}
+
+div.dropdown_list li.courses a.color-6{
+	border-left: 4px solid #7ADFC7;
+}
 
 div.innerwrap > img {
 	bottom: 0;
@@ -681,13 +710,6 @@ div.innerwrap > img:hover {
 }
 
 div.innerwrap{
-	/*background-image: -moz-linear-gradient(top, rgba(0,0,0,0.62) 0%, rgba(0,0,0,0.12) 27%, rgba(0,0,0,0.01) 42%, rgba(0,0,0,0.06) 53%, rgba(0,0,0,0.48) 100%), url("http://www.blog.spoongraphics.co.uk/wp-content/uploads/2011/great-britain/great-britain-sm.jpg"); *//* FF3.6+ */
-	/*background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(0,0,0,0.62)), color-stop(27%,rgba(0,0,0,0.12)), color-stop(42%,rgba(0,0,0,0.01)), color-stop(53%,rgba(0,0,0,0.06)), color-stop(100%,rgba(0,0,0,0.48))),url("http://www.blog.spoongraphics.co.uk/wp-content/uploads/2011/great-britain/great-britain-sm.jpg"); *//* Chrome,Safari4+ */
-	/*background-image: -webkit-linear-gradient(top, rgba(0,0,0,0.62) 0%,rgba(0,0,0,0.12) 27%,rgba(0,0,0,0.01) 42%,rgba(0,0,0,0.06) 53%,rgba(0,0,0,0.48) 100%), url("http://www.blog.spoongraphics.co.uk/wp-content/uploads/2011/great-britain/great-britain-sm.jpg"); *//* Chrome10+,Safari5.1+ */
-	/*background-image: -o-linear-gradient(top, rgba(0,0,0,0.62) 0%,rgba(0,0,0,0.12) 27%,rgba(0,0,0,0.01) 42%,rgba(0,0,0,0.06) 53%,rgba(0,0,0,0.48) 100%),url("http://www.blog.spoongraphics.co.uk/wp-content/uploads/2011/great-britain/great-britain-sm.jpg"); *//* Opera 11.10+ */
-	/*background-image: -ms-linear-gradient(top, rgba(0,0,0,0.62) 0%,rgba(0,0,0,0.12) 27%,rgba(0,0,0,0.01) 42%,rgba(0,0,0,0.06) 53%,rgba(0,0,0,0.48) 100%),url("http://www.blog.spoongraphics.co.uk/wp-content/uploads/2011/great-britain/great-britain-sm.jpg"); *//* IE10+ */
-	/*background-image: linear-gradient(to bottom, rgba(0,0,0,0.62) 0%,rgba(0,0,0,0.12) 27%,rgba(0,0,0,0.01) 42%,rgba(0,0,0,0.06) 53%,rgba(0,0,0,0.48) 100%),url("http://www.blog.spoongraphics.co.uk/wp-content/uploads/2011/great-britain/great-britain-sm.jpg"); *//* W3C */
-	/*filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#9e000000', endColorstr='#7a000000',GradientType=0 ); *//* IE6-9 */
 	background-repeat: repeat-x, no-repeat;
 	background-position: top, center;
 	background-size: auto, cover;
